spacing fix

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -48,6 +48,7 @@
 @media screen and (max-width: 768px) {
   .card {
     text-align: left;
+    margin: 1rem 0rem;
   }
 
   .card i {
